--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "3.4.3"
   },
+  "engines": {
+    "node": "^16.14.2",
+    "npm": "^8.5.5"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
